--- a/Mobile App/Demo4.2/app/src/main/res/layout/item_step_adapter.xml
+++ b/Mobile App/Demo4.2/app/src/main/res/layout/item_step_adapter.xml
@@ -29,7 +29,7 @@
         android:textColor="@android:color/black"
 
         app:layout_constraintBottom_toTopOf="@id/tvDistance"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/imgSpeaker"
         app:layout_constraintStart_toEndOf="@id/imgType"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -46,7 +46,21 @@
         android:visibility="visible"
 
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/imgSpeaker"
         app:layout_constraintStart_toEndOf="@id/imgType" />
+
+    <ImageView
+        android:id="@+id/imgSpeaker"
+        android:layout_width="@dimen/_30sdp"
+        android:layout_height="@dimen/_30sdp"
+        android:layout_marginEnd="@dimen/_10sdp"
+        android:src="@drawable/ic_speaker"
+        android:clickable="true"
+
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:focusable="true" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
