--- a/Mobile App/Demo4.2/app/src/main/res/layout/dialog_info.xml
+++ b/Mobile App/Demo4.2/app/src/main/res/layout/dialog_info.xml
@@ -76,12 +76,11 @@
                 android:id="@+id/tvClose"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Close"
                 android:layout_margin="@dimen/_20sdp"
                 android:fontFamily="@font/nunito_black"
+                android:text="@android:string/ok"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
-
 
 
                 app:layout_constraintBottom_toBottomOf="parent"
