--- a/Mobile App/Demo4.2/app/src/main/res/layout/dialog_warning.xml
+++ b/Mobile App/Demo4.2/app/src/main/res/layout/dialog_warning.xml
@@ -73,13 +73,30 @@
                 />
 
             <TextView
+                android:id="@+id/tvGo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="OK"
+                android:layout_marginBottom="@dimen/_20sdp"
+                android:layout_marginEnd="@dimen/_10sdp"
+                android:fontFamily="@font/nunito_black"
+                android:textColor="@android:color/black"
+                android:textSize="18sp"
+
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/tvClose"
+                />
+
+            <TextView
                 android:id="@+id/tvClose"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/_20sdp"
                 android:fontFamily="@font/nunito_black"
-                android:text="@android:string/ok"
-                android:textColor="@android:color/black"
+                android:text="Close"
+                android:textColor="@android:color/darker_gray"
                 android:textSize="18sp"
 
 
