--- a/Mobile App/Demo4.2/app/src/main/res/layout/dialog_change_walking_speed.xml
+++ b/Mobile App/Demo4.2/app/src/main/res/layout/dialog_change_walking_speed.xml
@@ -31,91 +31,182 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         >
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_25sdp"
-            >
+            android:layout_marginTop="@dimen/_25sdp">
 
             <TextView
                 android:id="@+id/tvName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="FPT University"
+                android:layout_marginTop="@dimen/_10sdp"
                 android:fontFamily="@font/nunito_black"
+                android:text="FPT University"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
-                android:layout_marginTop="@dimen/_10sdp"
 
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/tvDes"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="gdhasjd sahdgjsagd askgdjhasgj sahjgdjasgj"
-                android:textSize="16sp"
-                android:fontFamily="@font/nunito_light"
-                android:textColor="@android:color/black"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:layout_marginBottom="@dimen/_10sdp"
-                android:layout_marginStart="@dimen/_20sdp"
-                android:layout_marginEnd="@dimen/_20sdp"
-
-
-                app:layout_constraintTop_toBottomOf="@id/tvName"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/snChooseSex"
-                />
-
-            <Spinner
-                android:id="@+id/snChooseSex"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_20sdp"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:fontFamily="@font/nunito_light"
+                android:text="Current walking-speed: "
+                android:textColor="@android:color/black"
+                android:textSize="16sp"
 
-                app:layout_constraintTop_toBottomOf="@id/tvDes"
+
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tvName" />
+
+            <TextView
+                android:id="@+id/tvCurrentSpeed"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:text="4.892 (km/h)"
+                android:textColor="@android:color/black"
+                android:textSize="16sp"
+                android:fontFamily="@font/nunito_semi_bold"
+
+                app:layout_constraintHorizontal_bias="0"
+                app:layout_constraintTop_toBottomOf="@id/tvName"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/tvClose"
+                app:layout_constraintStart_toEndOf="@id/tvDes"
+                />
+
+            <LinearLayout
+                android:id="@+id/bgLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:orientation="horizontal"
+                android:layout_marginStart="@dimen/_20sdp"
+                android:gravity="right"
+
+                app:layout_constraintBottom_toBottomOf="@id/bgInput"
+                app:layout_constraintEnd_toStartOf="@+id/bgInput"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tvDes">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="Gender"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    />
+
+
+
+                <Spinner
+                    android:id="@+id/snChooseSex"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/bgInput"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/_50sdp"
+                android:orientation="horizontal"
+                android:layout_marginEnd="@dimen/_20sdp"
+
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/bgLabel"
+                app:layout_constraintTop_toTopOf="@id/bgLabel">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="Age"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    />
+
+                <EditText
+                    android:id="@+id/edtAge"
+                    android:layout_width="@dimen/_50sdp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:inputType="number"
+                    android:text="18"
+                    android:textAlignment="center"
+                    />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/tvNew"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_20sdp"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:fontFamily="@font/nunito_light"
+                android:text="New walking-speed: "
+                android:textColor="@android:color/black"
+                android:textSize="16sp"
+
+
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/bgInput" />
+
+            <TextView
+                android:id="@+id/tvNewSpeed"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:text="4.892 (km/h)"
+                android:textColor="@android:color/black"
+                android:textSize="16sp"
+                android:fontFamily="@font/nunito_semi_bold"
+
+                app:layout_constraintHorizontal_bias="0"
+                app:layout_constraintTop_toBottomOf="@id/bgInput"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/tvNew"
                 />
 
             <TextView
                 android:id="@+id/tvDownload"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Download"
-                android:layout_marginBottom="@dimen/_20sdp"
                 android:layout_marginEnd="@dimen/_10sdp"
+                android:layout_marginBottom="@dimen/_20sdp"
                 android:fontFamily="@font/nunito_black"
-                android:textColor="@android:color/holo_orange_light"
+                android:text="Save"
+                android:textColor="@android:color/black"
                 android:textSize="18sp"
 
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toStartOf="parent"
+
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/tvClose"
-                />
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="parent" />
 
             <TextView
                 android:id="@+id/tvClose"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Close"
                 android:layout_margin="@dimen/_20sdp"
                 android:fontFamily="@font/nunito_black"
-                android:textColor="@android:color/black"
+                android:text="Close"
+                android:textColor="@android:color/darker_gray"
                 android:textSize="18sp"
-
-
 
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
-                 />
+                app:layout_constraintTop_toBottomOf="@id/tvNew" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
