--- a/Mobile App/Demo4.2/app/src/main/res/layout/fragment_map.xml
+++ b/Mobile App/Demo4.2/app/src/main/res/layout/fragment_map.xml
@@ -7,6 +7,7 @@
     android:clickable="true"
     android:focusable="true">
 
+    <!-- INPUT BOX -->
     <androidx.cardview.widget.CardView
         android:id="@+id/bgInput"
         android:layout_width="match_parent"
@@ -22,6 +23,7 @@
             android:layout_height="@dimen/_100sdp"
             android:orientation="vertical">
 
+            <!-- IMAGE FROM - TO -->
             <ImageView
                 android:id="@+id/icon_from_to"
                 android:layout_width="wrap_content"
@@ -37,6 +39,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
+            <!-- START POINT INPUT -->
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/constraintLayout2"
                 android:layout_width="0dp"
@@ -96,6 +99,7 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
+            <!-- END POINT INPUT -->
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/constraintLayout"
                 android:layout_width="0dp"
@@ -147,7 +151,6 @@
 
     </androidx.cardview.widget.CardView>
 
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -159,6 +162,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/bgInput">
 
+        <!-- ORIENTATION GUIDE THROUGH QR-CODE-->
         <FrameLayout
             android:id="@+id/frame"
             android:layout_width="match_parent"
@@ -192,6 +196,7 @@
 
         </FrameLayout>
 
+        <!-- MAP HUB -->
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvMap"
             android:layout_width="match_parent"
@@ -204,6 +209,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/frame" />
 
+        <!-- MAP FLOOR SWITCHER -->
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvDot"
             android:layout_width="wrap_content"
@@ -216,6 +222,7 @@
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent" />
 
+        <!-- TIME + DISTANCE INFO -->
         <LinearLayout
             android:id="@+id/bgTime"
             android:layout_width="match_parent"
@@ -248,7 +255,7 @@
                 android:visibility="invisible" />
         </LinearLayout>
 
-
+        <!-- NAVIGATE -->
         <androidx.cardview.widget.CardView
             android:id="@+id/bgNavigate"
             android:layout_width="0dp"
@@ -301,6 +308,7 @@
 
         </androidx.cardview.widget.CardView>
 
+        <!-- STEP GUIDE -->
         <androidx.cardview.widget.CardView
             android:id="@+id/bgStep"
             android:layout_width="0dp"
@@ -350,6 +358,7 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.cardview.widget.CardView>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
