Android App: modify drawImage() with smooth drawing + fix drawing overlay

--- a/Mobile App/Demo4.2/app/src/main/res/layout/fragment_list_building_updated.xml
+++ b/Mobile App/Demo4.2/app/src/main/res/layout/fragment_list_building_updated.xml
@@ -47,6 +47,7 @@
                 android:layout_marginStart="@dimen/_10sdp"
                 android:background="@null"
                 android:fontFamily="@font/nunito_extralight"
+                android:textColor="@color/dark_blue"
                 android:hint="Search building"
                 android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="parent"
