Commit 4/21/2020. Update UX, UI.

--- a/Web Admin/Capstone_Web/src/main/resources/static/css/building.css
+++ b/Web Admin/Capstone_Web/src/main/resources/static/css/building.css
@@ -41,7 +41,7 @@
 	margin-left: 1%;
 	width: auto;
 	float: left;
-	width: 83%;
+	width: 70%;
 	/* background-color: silver; */
 }
 
@@ -54,25 +54,22 @@
 	color: white;
 }
 
-#content-header {
+.content-header {
 	width: 99%;
 	float: left;
 	margin-top: 1%;
 }
 
-#content-header p {
+.content-header p {
 	font-size: 30px;
 	float: left;
 	color: #575c59;
 }
 
-#content-header-action {
-	float: right;
-}
-
-#content-body-buidling {
+.building {
 	/* background-color: gray; */
-	width: 60%;
+	width: 70%;
+	margin-left: 15%;
 	float: left;
 }
 
@@ -80,6 +77,7 @@
 	/* background-color: gray; */
 	width: 60%;
 	float: left;
+	margin-left: 20%;
 }
 
 #buildingList {
@@ -90,54 +88,58 @@
 #floorLink {
 	width: 70%;
 	float: left;
-	position: relative;
+	height: 50px;
+}
+
+#floorLink-header {
+	text-align: center;
+	width: 70%;
+	font-weight: bold;
+	float: left;
+	height: 50px;
+	width: 70%;
+	float: left;
 }
 
 #floorLink span {
 	float: right;
 }
 
-#imageButton {
-	width: 10%;
+#detail-header {
+	width: 30%;
+	height: 50px;
 	float: left;
 	text-align: center;
+	font-weight: bold;
 }
 
-#deleteButton {
-	width: 10%;
+#detailButton {
+	width: 30%;
+	height: 50px;
 	float: left;
 	text-align: center;
-}
-
-#infoButton {
-	width: 10%;
-	float: left;
-	text-align: center;
+	font-weight: bold;
+	color: blue;
 }
 
 #floorImage {
-	height: 80vh;
+	height: 90vh;
 }
 
-.modal-body {
+#floor-info-body {
 	display: block;
-	margin-left: auto;
-	margin-right: auto;
+	margin-left: 10%;
+	margin-right: 10%;
+	padding-top: 5px !important;
+}
+
+#qrCodeWraper {
+	text-align: center;
 }
 
 #list-group {
 	width: 100%;
 	float: left;
-}
-
-#list-group-1 {
-	float: left;
-	width: 75%;
-}
-
-#list-group-2 {
-	float: left;
-	width: 25%;
 }
 
 #navigate-footer {
@@ -150,8 +152,58 @@
 	float: left;
 }
 
+.right {
+	float: right;
+	margin-left: 1%;
+}
+
+.wraper {
+	float: left;
+	width: 100%;
+	margin-bottom: 1%;
+}
+
+#buildingMessageWraper {
+	width: 60%;
+	float: left;
+}
+
+#buildingActionWraper {
+	width: 40%;
+	float: left;
+}
+
+#floorActionWraper {
+	width: 30%;
+	float: left;
+}
+
+#floorMessageWraper {
+	width: 70%;
+	float: left;
+	position: relative;
+}
+
+#floorMessageWraper span {
+	position: absolute;
+	right: 0px;
+	top: 0px;
+}
+
+.success {
+	color: green;
+	text-decoration: underline;
+}
+
+.failed {
+	color: red;
+}
+
 .modal-header {
 	background-color: #4e73df;
+	padding-left: 1rem;
+	padding-top: 10px;
+	padding-bottom: 10px;
 }
 
 .modal-header h5 {
@@ -163,12 +215,155 @@
 	padding-left: 0px !important;
 }
 
-#form-header {
+.form-header {
 	background-color: #4e73df;
 	margin-bottom: 2%;
-	border-radius: 10px;
+	border-radius: 5px;
 }
 
-#form-header h5 {
+.form-header h5 {
 	color: white;
+	margin-bottom: 0px;
+}
+
+#list-header {
+	padding: 10px 10px 10px 20px;
+	width: 100%;
+	background-color: #4e73df !important;
+}
+
+#list-header h5 {
+	color: white;
+	font-weight: bold;
+}
+
+.list-group {
+	float: left;
+	width: 100%;
+}
+
+#floorList {
+	float: left;
+	width: 100%;
+}
+
+#floorList button {
+	color: blue;
+}
+
+#floorList-header {
+	float: left;
+	width: 100%;
+	text-align: center;
+	font-weight: bold;
+}
+
+.sticky-header {
+	float: left;
+	width: 100%;
+	position: sticky;
+	top: 0;
+	z-index: 10;
+}
+
+#floorList-1 {
+	float: left;
+	width: 55%;
+	height: 50px;
+}
+
+#floorList-2 {
+	float: left;
+	width: 20%;
+	height: 50px;
+}
+
+#floorList-3 {
+	float: left;
+	width: 25%;
+	height: 50px;
+}
+
+#locationDetailBtn {
+	float: right;
+	margin-bottom: 2%;
+	margin-left: 2%;
+}
+
+#floor-header, #location-header {
+	background-color: #4e73df;
+	color: white;
+	padding-left: 1rem;
+	padding-top: 5px;
+	padding-bottom: 0px;
+	border-radius: 5px 5px 0px 0px;
+}
+
+#floorWraper {
+	width: 80%;
+	float: left;
+	padding-top: 0px !important;
+	margin-left: 10%;
+	margin-right: 10%;
+}
+
+#floor-list-wraper {
+	float: left;
+	width: 100%;
+	max-height: 48vh;
+	overflow-y: auto;
+}
+
+#locationWraper {
+	width: 100%;
+	float: left;
+	margin-bottom: 2%;
+}
+
+#locationWraper button {
+	float: right;
+}
+
+#header-wraper {
+	background-color: #4e73df;
+	color: white;
+	padding: 10px 10px 10px 20px;
+}
+
+.modal {
+	background-color: rgba(0, 0, 0, 0.7);
+}
+
+#content-body-upload {
+	width: 40%;
+	float: left;
+	margin-left: 30%;
+	padding: 10px 10px 10px 10px;
+}
+
+#content-body-upload h5 {
+	background-color: #17a2b8;
+	padding: 10px 10px 10px 10px;
+	color: white;
+	font-weight: bold;
+}
+
+input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
+	/* display: none; <- Crashes Chrome on hover */
+	-webkit-appearance: none;
+	margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+}
+
+#actionWraper {
+	width: 100%;
+	margin-bottom: 5px;
+	float: left;
+}
+
+#floorModal {
+	margin-top: 0px !important;
+}
+
+.warning {
+	background-color: #f7685e !important;
 }
