--- a/Mobile App/Demo4.2/app/src/main/res/drawable/border_radius_textview.xml
+++ b/Mobile App/Demo4.2/app/src/main/res/drawable/border_radius_textview.xml
@@ -3,5 +3,5 @@
     <corners android:radius="@dimen/_5sdp"/>
     <solid android:color="@color/light_gray" />
     <padding android:left="2dp" android:right="2dp" android:top="2dp" android:bottom="2dp"/>
-    <stroke android:width="1dp" android:color="@color/green"/>
+<!--    <stroke android:width="1dp" android:color="@color/green"/>-->
 </shape>
