--- a/Mobile App/Demo4.2/app/src/main/res/layout/fragment_navigation.xml
+++ b/Mobile App/Demo4.2/app/src/main/res/layout/fragment_navigation.xml
@@ -2,7 +2,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -10,7 +9,27 @@
         android:id="@+id/ar_fragment"
         android:name="fpt.capstone.inqr.fragment.CustomArFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/card_view" />
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/lottie_scan_qr"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_gravity="center"
+        android:scaleType="centerCrop"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@+id/tv_scanning_result"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/ar_fragment"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="false"
+        app:lottie_rawRes="@raw/qr_scan_ok"
+        app:lottie_speed="3.5" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/nav_info_view"
